--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,5 +1,5 @@
-scenario-name=Sandbox
-description=In this creative mode, you can experiment with the game and build as you like. You build in god mode. You can have all technologies researched and spawn as many items as you want using cheat mode.
+scenario-name=TankPVP
+description=Vanilla scenario made for base 1.0. No mod required. Using headless server for hosting is recommended. Periodic saving is unnecessary. No need to manage players. It's good to leave it running without care. It's okay to leave it running it without care.\n\nYou can host this from your client but it's unfair if you join in fighting due to ping issues.\n\nVisit github for updates. https://github.com/x2605/factorio-tank-pvp
 
 progress-bar=Preparing map __1__...
 help_resetffa=: Resets FreeForAll map. Only admins can use.
