--- a/locale/ko/locale.cfg
+++ b/locale/ko/locale.cfg
@@ -1,5 +1,5 @@
-description=이 창작 모드에서는 게임 내에서 여러분이 원하는 대로 만들고 실험할 수 있습니다. 갓 모드로 플레이합니다. 모든 기술이 연구 완료된 상태가 되도록 할 수도 있고, 치트 모드를 사용하여 아이템들을 원하는 만큼 생성할 수도 있습니다.
-scenario-name=샌드박스
+description=팩토리오 1.0 버전에서 만든 바닐라 시나리오. 모드 불필요. 호스트는 헤드리스 서버(headless server, 전용 서버, dedicated server)에서 실행하는 것을 권장합니다. 주기적인 맵 저장은 불필요합니다. 플레이어를 관리할 필요가 없습니다. 완벽하게 방치해도 좋습니다.\n\n클라이언트에서 직접 호스트를 할 수도 있지만 호스트가 플레이에 개입한다면 핑 문제로 불공정성을 야기할 수 있습니다.\n\n업데이트를 위해선 github에 방문하십시오. https://github.com/x2605/factorio-tank-pvp
+scenario-name=TankPVP
 
 progress-bar=__1__ 지도를 준비하는 중...
 help_resetffa=: FreeForAll 지도를 초기화합니다. 관리자만 사용할 수 있습니다.
