--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -2,15 +2,21 @@ scenario-name=TankPVP
 description=Vanilla scenario made for base 1.0. No mod required. Using headless server for hosting is recommended. Periodic saving is unnecessary. No need to manage players. It's good to leave it running without care. It's okay to leave it running it without care.\n\nYou can host this from your client but it's unfair if you join in fighting due to ping issues.\n\nVisit github for updates. https://github.com/x2605/factorio-tank-pvp
 
 progress-bar=Preparing map __1__...
-help_resetffa=: Resets FreeForAll map. Only admins can use.
+inform_resetffa_reason_period=[color=cyan][INFO][/color] FreeForAll map resets because it is configured to reset every __1__ hours interval.
 progress-bar-team=Preparing map __1__.
+
+help_resetffa=: Resets FreeForAll map. Only admins can use.
 not_admin=[WARNING] You are not admin.
 during_map_gen=[WARNING] During map generation. Can not start another.
 help_kill=<playername> : Destroy a player's vehicle. Only admins can use.
 input_parameter=[WARNING] Input parameter.
+wrong_parameter=[WARNING] Wrong parameter.
 cannot_find=[WARNING] Can't find "__1__".
 not_riding=[WARNING] "__1__" isn't riding vehicle.
-help_n=<message> : Same as /shout or /s <message>, to allow use it with korean keyboard w/o pressing «—/øµ convert key.
+help_n=<message> : Same as /shout or /s <message>, to allow use it with korean keyboard w/o pressing Ìïú/ÏòÅ convert key.
+help_sdm=<ammoid> <damagemodifier> : Modifies damage of a weapon of every forces. <ammoid> can be checked by /gdm. Only admins can use.
+help_gdm=: Print list of weapon damage modifiers.
+
 queue-for-team=[font=default-game]Queue for team deathmatch[/font]
 queue-for-team-tooltip=Countdown will start if there is no team deathmatch opened and at least __1__ people queueing.
 queue-for-team-count=[font=default-game], Queue = __1__[/font]
