--- a/locale/ko/locale.cfg
+++ b/locale/ko/locale.cfg
@@ -2,15 +2,21 @@ description=팩토리오 1.0 버전에서 만든 바닐라 시나리오. 모드 
 scenario-name=TankPVP
 
 progress-bar=__1__ 지도를 준비하는 중...
-help_resetffa=: FreeForAll 지도를 초기화합니다. 관리자만 사용할 수 있습니다.
+inform_resetffa_reason_period=[color=cyan][INFO][/color] FreeForAll 맵은 매 __1__ 시간마다 재생성 하도록 설정되어 있기 때문에 재생성 합니다.
 progress-bar-team=__1__ 지도를 준비하는 중.
+
+help_resetffa=: FreeForAll 지도를 초기화합니다. 관리자만 사용할 수 있습니다.
 not_admin=[WARNING] 관리자가 아님.
 during_map_gen=[WARNING] 지도 생성 중. 다른 생성을 시작할 수 없음.
 help_kill=<playername> : 플레이어의 차량을 파괴합니다. 관리자만 사용할 수 있습니다.
 input_parameter=[WARNING] 파라메터를 입력하세요.
+wrong_parameter=[WARNING] 파라메터가 잘못되었습니다.
 cannot_find=[WARNING] "__1__"은 찾을 수 없습니다.
 not_riding=[WARNING] "__1__"은 탑승 상태가 아닙니다.
 help_n=<message> : /shout 또는 /s <message>와 같은데, 한/영 변환키를 누르지 않고 사용할 수 있게 해줍니다.
+help_sdm=<ammoid> <damagemodifier> : 모든 세력의 무기별 데미지를 조정합니다. <ammoid>는 /gdm으로 확인할 수 있습니다. 관리자만 사용할 수 있습니다.
+help_gdm=: 무기별 데미지 조정 목록을 출력합니다.
+
 queue-for-team=[font=default-game]팀 데스매치 참가대기[/font]
 queue-for-team-tooltip=열린 팀 데스매치가 없고, 최소 __1__인 이상이 참가대기중일 때 카운트다운이 시작됩니다.
 queue-for-team-count=[font=default-game], 대기 중 = __1__[/font]
