관리기능 추가

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -16,6 +16,12 @@ not_riding=[WARNING] "__1__" isn't riding vehicle.
 help_n=<message> : Same as /shout or /s <message>, to allow use it with korean keyboard w/o pressing 한/영 convert key.
 help_sdm=<ammoid> <damagemodifier> : Modifies damage of a weapon of every forces. <ammoid> can be checked by /gdm. Only admins can use.
 help_gdm=: Print list of weapon damage modifiers.
+help_srm=<ammoid> <fireratemodifier> : Modifies fire rate of a weapon of every forces. <ammoid> can be checked by /grm. Only admins can use.
+help_grm=: Print list of weapon fire rate modifiers.
+help_close-team-game=: Force to close currently opened team game. Only admins can use.
+notice_sdm=[color=red][NOTICE][/color] Weapon "[color=1,0.5,1,1]__1__[/color]" damage modifier is set to [color=1,1,0,1]__2__%[/color] by __3__
+notice_srm=[color=red][NOTICE][/color] Weapon "[color=1,0.5,1,1]__1__[/color]" fire rate modifier is set to [color=0.25,0.75,1,1]__2__%[/color] by __3__
+notice_force-close-team-game=[color=red][NOTICE][/color] Current team game is set to be closed soon by __1__
 
 queue-for-team=[font=default-game]Queue for team deathmatch[/font]
 queue-for-team-tooltip=Countdown will start if there is no team deathmatch opened and at least __1__ people queueing.
@@ -51,6 +57,7 @@ summary-time-used=PlayTime :
 reason-eliminated=Eliminated
 reason-captured=Captured
 reason-timeup=Time up
+reason-forceclose=Force close
 table-cell-player=Player
 table-cell-kills=Kills
 table-cell-damage-dealt=Damage
