--- a/locale/ko/locale.cfg
+++ b/locale/ko/locale.cfg
@@ -16,6 +16,12 @@ not_riding=[WARNING] "__1__"은 탑승 상태가 아닙니다.
 help_n=<message> : /shout 또는 /s <message>와 같은데, 한/영 변환키를 누르지 않고 사용할 수 있게 해줍니다.
 help_sdm=<ammoid> <damagemodifier> : 모든 세력의 무기별 데미지를 조정합니다. <ammoid>는 /gdm으로 확인할 수 있습니다. 관리자만 사용할 수 있습니다.
 help_gdm=: 무기별 데미지 조정 목록을 출력합니다.
+help_srm=<ammoid> <fireratemodifier> : 모든 세력의 무기별 발사속도를 조정합니다. <ammoid>는 /grm으로 확인할 수 있습니다. 관리자만 사용할 수 있습니다.
+help_grm=: 무기별 발사속도 조정 목록을 출력합니다.
+help_close-team-game=: 현재 열린 팀 게임을 강제로 종료합니다. 관리자만 사용할 수 있습니다.
+notice_sdm=[color=red][NOTICE][/color] 무기 "[color=1,0.5,1,1]__1__[/color]"의 공격력이 __3__에 의해서 [color=1,1,0,1]__2__%[/color]으로 설정되었습니다.
+notice_srm=[color=red][NOTICE][/color] 무기 "[color=1,0.5,1,1]__1__[/color]"의 발사속도가 __3__에 의해서 [color=0.25,0.75,1,1]__2__%[/color]으로 설정되었습니다.
+notice_force-close-team-game=[color=red][NOTICE][/color] 현재 팀 게임은 __1__에 의해서 곧 닫히도록 설정되었습니다.
 
 queue-for-team=[font=default-game]팀 데스매치 참가대기[/font]
 queue-for-team-tooltip=열린 팀 데스매치가 없고, 최소 __1__인 이상이 참가대기중일 때 카운트다운이 시작됩니다.
@@ -51,6 +57,7 @@ summary-time-used=진행시간 :
 reason-eliminated=전멸
 reason-captured=점령
 reason-timeup=시간 초과
+reason-forceclose=강제 종료
 table-cell-player=플레이어
 table-cell-kills=킬
 table-cell-damage-dealt=피해량
