첫 테스트 가능한 버전

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -64,3 +64,6 @@ table-cell-damage-dealt=Damage
 table-cell-survival=Survival
 table-cell-capture=Capture
 table-cell-recover=Recover
+
+supply-took-by=__1__ has taken this supply!
+pop-supply=POP!
