--- a/locale/ko/locale.cfg
+++ b/locale/ko/locale.cfg
@@ -64,3 +64,6 @@ table-cell-damage-dealt=피해량
 table-cell-survival=생존
 table-cell-capture=점령
 table-cell-recover=복구
+
+supply-took-by=__1__이 보급품을 가져감!
+pop-supply=뿅!
