kill/death gui fixed

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -32,7 +32,7 @@ playing-team-count=[font=default-game] Team Playing = __1__[/font]
 spectate-team-count=[font=default-game], Spectating = __1__[/font]
 return-to-ffa=Return to FFA
 ffa-count=[font=default-game] FFA Playing = __1__[/font]
-leaderboard-tooltip=LeaderBoard ( kill = +1 / death = -0.5 )
+leaderboard-tooltip=LeaderBoard ( kills/deaths, ranked by kills )
 ffa-damage-tooltip=Damage dealt by __1__ = __2__
 die_on_team=[color=cyan][INFO][/color] You are dead on deathmatch. You will spectate after revive.
 lost_tank_offline_on_team=Your vehicle is destroyed while you're offline. Changing into spectator mode.
