--- a/locale/ko/locale.cfg
+++ b/locale/ko/locale.cfg
@@ -32,7 +32,7 @@ playing-team-count=[font=default-game] 팀 플레이 중 = __1__[/font]
 spectate-team-count=[font=default-game], 관전 중 = __1__[/font]
 return-to-ffa=FFA로 돌아가기
 ffa-count=[font=default-game] FFA 플레이 중 = __1__[/font]
-leaderboard-tooltip=리더보드 ( 킬 = +1 / 데스 = -0.5 )
+leaderboard-tooltip=리더보드 ( 킬/데스, 킬 순위 )
 ffa-damage-tooltip=__1__의 가한 피해량 = __2__
 die_on_team=[color=cyan][color=cyan][INFO][/color][/color] 데스매치에서 사망했습니다. 부활 시 관전할 수 있습니다.
 lost_tank_offline_on_team=[color=cyan][INFO][/color] 당신이 없는 동안 당신의 탱크가 파괴되었습니다. 관전모드로 전환합니다.
