Update translations from Crowdin

--- a/locale/de/locale.cfg
+++ b/locale/de/locale.cfg
@@ -6,12 +6,12 @@ inform_resetffa_reason_period=[color=cyan][INFO][/color] FreeForAll-Karte wird d
 progress-bar-team=Bereite Map vor __1__.
 
 help_resetffa=Setzt FreiFürAlle-Karte zurück. Nur Administratoren können dies benutzen.
-not_admin=[WARNUNG] Du hast keine administrations Rechte.
+not_admin=[WARNING] Du bist kein Admin.
 during_map_gen=[WARNUNG] Generiere Map, es kann keine weitere gestartet werden.
 help_kill=<playername> : Zersört das Fahrzeug des Spielers. Nur Administratoren können dies tun.
-input_parameter=[WARNUNG] Eingabe Parameter.
-wrong_parameter=[WARNUNG] Falscher Parameter.
-cannot_find=[WARNUNG] Nicht gefunden: "__1__".
+input_parameter=[WARNING] Eingabeparameter.
+wrong_parameter=[WARNING] Falscher Parameter.
+cannot_find=[WARNING] Kann "__1__" nicht finden.
 not_riding=[WARNUNG] "__1__" fährt kein Fahrzeug.
 help_n=<message> : Das gleiche wie /shout oder / s <message>, um es benutzten zu können benutze die Koreanische Tastatursprache, benutze w/o.
 help_sdm=<ammoid> <damagemodifier> : Modifiziert den Schaden jeder Waffe. <ammoid> kann mit /gdm überprüft werden. Nur Administratoren können dies tun.
